fix: Improve blog readability

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -693,3 +693,9 @@ figcaption {
 .new-prevnext__info {
   width: 7em;
 }
+
+.blog-page {
+  max-width: 65ch;
+  margin-left: auto;
+  margin-right: auto;
+}
